tests/ui/fail_producer_with_argument.stderr
warning: `$DIR/target/tests/genawaiter2/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
error: A generator producer cannot accept any arguments. Instead, consider using a closure and capturing the values you need.
 --> $DIR/fail_producer_with_argument.rs:4:1
  |
4 | async fn odds(co: Co<'_, u8>) {
  | ^^^^^
